package net.dskim.desingpattern.composite;

public interface AggregateMenu extends Menu {
	public void addMenu(Menu menu);
}
