package net.dskim.desingpattern.composite;

public interface Menu {
	public int getPrice();
}
