@startuml Iterator 패턴(김동석)

hide empty members
hide empty methods

title Composite 패턴(김동석)
header https://github.com/bluedskim/javaDesignPatterns
footer 작성시각 %date("yyyy.MM.dd' 'HH:mm")


interface Menu {
	public int getPrice();
}

interface AggregateMenu {
	public void addMenu(Menu menu);
}

class Noodle {
	public int getPrice();
}

class Rice {
	public int getPrice();
}

class SetMenu {
	List<Menu> menus
	public int getPrice();
	public void addMenu(Menu menu);
}

class IteratorTest {
	void compositionTest()
}

Menu <|-- AggregateMenu
Menu <|.. Noodle
Menu <|.. Rice
AggregateMenu <|.. SetMenu

IteratorTest --> Menu
IteratorTest --> AggregateMenu

@enduml